[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/GameSettingsPanelContainer.gd" type="Script" id=2]

[node name="GameSettingsPanelContainer" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.0
margin_top = -172.0
margin_right = 79.0
margin_bottom = 2.0
size_flags_vertical = 0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 158.0
margin_bottom = 174.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 158.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="GameSettingsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 152.0
margin_bottom = 395.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChessTimer" type="CheckButton" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_right = 152.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Chess Timer"

[node name="TurnLengthContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 13.0
margin_right = 152.0
margin_bottom = 24.0

[node name="TurnLengthLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/TurnLengthContainer"]
unique_name_in_owner = true
margin_right = 78.0
margin_bottom = 11.0
text = "Turn Clock (min)"

[node name="TurnLength" type="SpinBox" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/TurnLengthContainer"]
unique_name_in_owner = true
margin_left = 79.0
margin_right = 152.0
margin_bottom = 11.0
hint_tooltip = "Set a timer for each player (in minutes). It counts down during each turn."
size_flags_horizontal = 3
min_value = 1.0
max_value = 999999.0
value = 30.0

[node name="TurnMinLengthContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 25.0
margin_right = 152.0
margin_bottom = 36.0

[node name="TurnLengthLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/TurnMinLengthContainer"]
margin_right = 99.0
margin_bottom = 11.0
text = "Min Turn Clock (sec)"

[node name="TurnMinLength" type="SpinBox" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/TurnMinLengthContainer"]
unique_name_in_owner = true
margin_left = 100.0
margin_right = 152.0
margin_bottom = 11.0
hint_tooltip = "Set a timer for each player (in minutes). It counts down during each turn."
size_flags_horizontal = 3
min_value = 1.0
max_value = 999999.0
value = 10.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
margin_top = 37.0
margin_right = 152.0
margin_bottom = 48.0

[node name="GameLengthLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/HBoxContainer2"]
margin_right = 70.0
margin_bottom = 11.0
text = "Round Length "

[node name="GameLength" type="SpinBox" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 71.0
margin_right = 152.0
margin_bottom = 11.0
hint_tooltip = "Set the timer for the match (in frames)."
size_flags_horizontal = 3
min_value = 1.0
max_value = 999999.0
value = 3600.0

[node name="Separator" type="PanelContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
visible = false
margin_top = 49.0
margin_right = 152.0
margin_bottom = 53.0
rect_min_size = Vector2( 0, 4 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
margin_top = 49.0
margin_right = 152.0
margin_bottom = 60.0

[node name="CharDistLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/HBoxContainer3"]
margin_right = 70.0
margin_bottom = 11.0
text = "Start Distance"

[node name="CharDist" type="SpinBox" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 71.0
margin_right = 152.0
margin_bottom = 11.0
size_flags_horizontal = 3
min_value = 16.0
max_value = 300.0
value = 55.0

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
margin_top = 61.0
margin_right = 152.0
margin_bottom = 72.0

[node name="CharHeightLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/HBoxContainer4"]
margin_right = 58.0
margin_bottom = 11.0
text = "Start Height"

[node name="CharHeight" type="SpinBox" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/HBoxContainer4"]
unique_name_in_owner = true
margin_left = 59.0
margin_right = 152.0
margin_bottom = 11.0
size_flags_horizontal = 3
max_value = 100000.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
margin_top = 73.0
margin_right = 152.0
margin_bottom = 84.0

[node name="StageWidthLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/HBoxContainer"]
margin_right = 57.0
margin_bottom = 11.0
text = "Stage Width"

[node name="StageWidth" type="SpinBox" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 58.0
margin_right = 152.0
margin_bottom = 11.0
size_flags_horizontal = 3
min_value = 100.0
max_value = 100000.0
value = 800.0

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
margin_top = 85.0
margin_right = 152.0
margin_bottom = 96.0

[node name="CeilingHeightLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/HBoxContainer6"]
margin_right = 63.0
margin_bottom = 11.0
text = "Ceiling Height"

[node name="CeilingHeight" type="SpinBox" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/HBoxContainer6"]
unique_name_in_owner = true
margin_left = 64.0
margin_right = 152.0
margin_bottom = 11.0
size_flags_horizontal = 3
min_value = 32.0
max_value = 50000.0
value = 800.0

[node name="HBoxContainer7" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
margin_top = 97.0
margin_right = 152.0
margin_bottom = 108.0

[node name="DIComboLimitLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/HBoxContainer7"]
margin_right = 70.0
margin_bottom = 11.0
text = "DI Combo Limit"

[node name="DIComboLimit" type="SpinBox" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/HBoxContainer7"]
unique_name_in_owner = true
margin_left = 71.0
margin_right = 152.0
margin_bottom = 11.0
hint_tooltip = "Once the combo count reaches this number, the DI multiplier will stop increasing."
size_flags_horizontal = 3
min_value = 1.0
max_value = 99.0
value = 15.0

[node name="Separator2" type="PanelContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
visible = false
margin_top = 97.0
margin_right = 152.0
margin_bottom = 101.0
rect_min_size = Vector2( 0, 4 )

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
margin_top = 109.0
margin_right = 152.0
margin_bottom = 109.0

[node name="DamageModifierContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 110.0
margin_right = 152.0
margin_bottom = 122.0

[node name="DamageModifierLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/DamageModifierContainer"]
margin_right = 80.0
margin_bottom = 11.0
text = "Damage Modifier"

[node name="DamageModifier" type="HSlider" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/DamageModifierContainer"]
unique_name_in_owner = true
margin_left = 81.0
margin_right = 131.0
margin_bottom = 12.0
hint_tooltip = "Alter how much damage the fighters take."
size_flags_horizontal = 3
min_value = 0.1
max_value = 3.0
step = 0.1
value = 1.0
scrollable = false

[node name="DamageModifierValueLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/DamageModifierContainer"]
unique_name_in_owner = true
margin_left = 132.0
margin_right = 152.0
margin_bottom = 11.0
rect_min_size = Vector2( 20, 0 )
text = "1"
align = 1

[node name="HitstunModifierContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 123.0
margin_right = 152.0
margin_bottom = 135.0

[node name="HitstunModifierLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/HitstunModifierContainer"]
margin_right = 76.0
margin_bottom = 11.0
text = "Hitstun Modifier"

[node name="HitstunModifier" type="HSlider" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/HitstunModifierContainer"]
unique_name_in_owner = true
margin_left = 77.0
margin_right = 131.0
margin_bottom = 12.0
hint_tooltip = "Alter how much hitstun the fighters take."
size_flags_horizontal = 3
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0
scrollable = false

[node name="HitstunModifierValueLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/HitstunModifierContainer"]
unique_name_in_owner = true
margin_left = 132.0
margin_right = 152.0
margin_bottom = 11.0
rect_min_size = Vector2( 20, 0 )
text = "1"
align = 1

[node name="HitstopModifierContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 136.0
margin_right = 152.0
margin_bottom = 148.0

[node name="HitstopModifierLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/HitstopModifierContainer"]
margin_right = 76.0
margin_bottom = 11.0
text = "Hitstop Modifier"

[node name="HitstopModifier" type="HSlider" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/HitstopModifierContainer"]
unique_name_in_owner = true
margin_left = 77.0
margin_right = 131.0
margin_bottom = 12.0
hint_tooltip = "Alter how much hitstop (freeze-frames on hit) the fighters take."
size_flags_horizontal = 3
max_value = 5.0
step = 0.1
value = 1.0
scrollable = false

[node name="HitstopModifierValueLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/HitstopModifierContainer"]
unique_name_in_owner = true
margin_left = 132.0
margin_right = 152.0
margin_bottom = 11.0
rect_min_size = Vector2( 20, 0 )
text = "1"
align = 1

[node name="GravityModifierContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 149.0
margin_right = 152.0
margin_bottom = 161.0

[node name="GravityModifierLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/GravityModifierContainer"]
unique_name_in_owner = true
margin_right = 77.0
margin_bottom = 11.0
text = "Gravity Modifier"

[node name="GravityModifier" type="HSlider" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/GravityModifierContainer"]
unique_name_in_owner = true
margin_left = 78.0
margin_right = 131.0
margin_bottom = 12.0
hint_tooltip = "Alter the strength of gravity."
size_flags_horizontal = 3
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0
scrollable = false

[node name="GravityModifierValueLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/GravityModifierContainer"]
unique_name_in_owner = true
margin_left = 132.0
margin_right = 152.0
margin_bottom = 11.0
rect_min_size = Vector2( 20, 0 )
text = "1"
align = 1

[node name="StartingMeterContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 162.0
margin_right = 152.0
margin_bottom = 174.0

[node name="StartingMeterLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/StartingMeterContainer"]
unique_name_in_owner = true
margin_right = 71.0
margin_bottom = 11.0
text = "Starting Meter"

[node name="StartingMeter" type="HSlider" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/StartingMeterContainer"]
unique_name_in_owner = true
margin_left = 72.0
margin_right = 131.0
margin_bottom = 12.0
hint_tooltip = "How much super meter you start with."
size_flags_horizontal = 3
max_value = 9.99
step = 0.5
scrollable = false

[node name="StartingMeterValueLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/StartingMeterContainer"]
unique_name_in_owner = true
margin_left = 132.0
margin_right = 152.0
margin_bottom = 11.0
rect_min_size = Vector2( 20, 0 )
text = "0"
align = 1

[node name="Separator3" type="PanelContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
visible = false
margin_top = 163.0
margin_right = 152.0
margin_bottom = 167.0
rect_min_size = Vector2( 0, 4 )

[node name="MinDIScalingContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 175.0
margin_right = 152.0
margin_bottom = 187.0

[node name="MinDIScalingMeterLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/MinDIScalingContainer"]
unique_name_in_owner = true
margin_right = 66.0
margin_bottom = 11.0
text = "Min DI Scaling"

[node name="MinDIScalingMeter" type="HSlider" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/MinDIScalingContainer"]
unique_name_in_owner = true
margin_left = 67.0
margin_right = 131.0
margin_bottom = 12.0
hint_tooltip = "Alter the strength of directional influence at the beginning of a combo."
size_flags_horizontal = 3
max_value = 20.0
step = 0.25
value = 1.0
scrollable = false

[node name="MinDIScalingMeterValueLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/MinDIScalingContainer"]
unique_name_in_owner = true
margin_left = 132.0
margin_right = 152.0
margin_bottom = 11.0
rect_min_size = Vector2( 20, 0 )
text = "1"
align = 1

[node name="MaxDIScalingContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 188.0
margin_right = 152.0
margin_bottom = 200.0

[node name="MaxDIScalingMeterLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/MaxDIScalingContainer"]
margin_right = 70.0
margin_bottom = 11.0
text = "Max DI Scaling"

[node name="MaxDIScalingMeter" type="HSlider" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/MaxDIScalingContainer"]
unique_name_in_owner = true
margin_left = 71.0
margin_right = 131.0
margin_bottom = 12.0
hint_tooltip = "Alter the strength of directional influence at the end of a combo."
size_flags_horizontal = 3
max_value = 20.0
step = 0.25
value = 6.0
scrollable = false

[node name="MaxDIScalingMeterValueLabel" type="Label" parent="VBoxContainer/ScrollContainer/GameSettingsContainer/MaxDIScalingContainer"]
unique_name_in_owner = true
margin_left = 132.0
margin_right = 152.0
margin_bottom = 11.0
rect_min_size = Vector2( 20, 0 )
text = "6"
align = 1

[node name="Separator4" type="PanelContainer" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
visible = false
margin_top = 201.0
margin_right = 152.0
margin_bottom = 205.0
rect_min_size = Vector2( 0, 4 )

[node name="P2Dummy" type="CheckButton" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 201.0
margin_right = 152.0
margin_bottom = 213.0
hint_tooltip = "Player 2 will not be prompted for input."
size_flags_horizontal = 15
text = "No P2 Input"
expand_icon = true

[node name="PredictionEnabled" type="CheckButton" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 214.0
margin_right = 152.0
margin_bottom = 226.0
hint_tooltip = "Enables the prediction ghost."
size_flags_horizontal = 15
pressed = true
text = "Prediction Enabled"
expand_icon = true

[node name="BurstEnabled" type="CheckButton" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 227.0
margin_right = 152.0
margin_bottom = 239.0
hint_tooltip = "Allow the use of burst moves."
size_flags_horizontal = 15
pressed = true
text = "Burst Enabled"
expand_icon = true

[node name="DIEnabled" type="CheckButton" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 240.0
margin_right = 152.0
margin_bottom = 252.0
hint_tooltip = "Enable directional influence, affecting the characters' knockback trajectory when they are hit."
size_flags_horizontal = 15
pressed = true
text = "DI Enabled"
expand_icon = true

[node name="SadnessEnabled" type="CheckButton" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 253.0
margin_right = 152.0
margin_bottom = 265.0
hint_tooltip = "Fighters playing passively can get sad, increasing damage taken and reducing meter gai
n."
size_flags_horizontal = 15
pressed = true
text = "Sadness Enabled"
expand_icon = true

[node name="ClashingEnabled" type="CheckButton" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 266.0
margin_right = 152.0
margin_bottom = 278.0
hint_tooltip = "Enables melee attack clashing."
size_flags_horizontal = 15
pressed = true
text = "Clashing Enabled"
expand_icon = true

[node name="BraceEnabled" type="CheckButton" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 279.0
margin_right = 152.0
margin_bottom = 291.0
hint_tooltip = "Enables bracing hits during the combo to reduce hitstun."
size_flags_horizontal = 15
text = "Brace Enabled"
expand_icon = true

[node name="CeilingEnabled" type="CheckButton" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 292.0
margin_right = 152.0
margin_bottom = 304.0
hint_tooltip = "Enable upper bounds limit."
size_flags_horizontal = 15
pressed = true
text = "Ceiling Enabled"
expand_icon = true

[node name="GravityEnabled" type="CheckButton" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 305.0
margin_right = 152.0
margin_bottom = 317.0
size_flags_horizontal = 15
pressed = true
text = "Gravity Enabled"
expand_icon = true

[node name="AsymmetricalClashing" type="CheckButton" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 318.0
margin_right = 152.0
margin_bottom = 330.0
hint_tooltip = "Clashes will occur even if one hitbox would hit the opponent while the other wouldn't. Enable for \"cinematic\" gameplay, might break balance."
size_flags_horizontal = 15
text = "Asymmetrical Clashing"
expand_icon = true

[node name="TurboMode" type="CheckButton" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 331.0
margin_right = 152.0
margin_bottom = 343.0
hint_tooltip = "Freely cancel moves into other moves."
size_flags_horizontal = 15
text = "Turbo Mode"
expand_icon = true

[node name="ExtremelyTurboMode" type="CheckButton" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 344.0
margin_right = 152.0
margin_bottom = 356.0
hint_tooltip = "Enable at your own risk. Don't say I didn't warn you."
size_flags_horizontal = 15
text = "Extremely Turbo Mode"
expand_icon = true

[node name="InfiniteResources" type="CheckButton" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 357.0
margin_right = 152.0
margin_bottom = 369.0
hint_tooltip = "Never run out of super-meter or other character-specific resources."
size_flags_horizontal = 15
text = "Infinite Resources"
expand_icon = true

[node name="OneHitKO" type="CheckButton" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 370.0
margin_right = 152.0
margin_bottom = 382.0
hint_tooltip = "Both players have 1 HP."
size_flags_horizontal = 15
text = "One-Hit KO"
expand_icon = true

[node name="AlwaysPerfectParry" type="CheckButton" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
margin_top = 383.0
margin_right = 152.0
margin_bottom = 395.0
hint_tooltip = "Every block is a parry and lets you act immediately."
size_flags_horizontal = 15
text = "Always Perfect Parry"
expand_icon = true

[node name="FrameByFrame" type="CheckButton" parent="VBoxContainer/ScrollContainer/GameSettingsContainer"]
unique_name_in_owner = true
visible = false
margin_top = 114.0
margin_right = 128.0
margin_bottom = 126.0
hint_tooltip = "Play through the match frame-by-frame. Not recommended for multiplayer."
size_flags_horizontal = 15
text = "Frame By Frame"
expand_icon = true

[node name="GameFormats" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 148.0
margin_right = 158.0
margin_bottom = 160.0
size_flags_horizontal = 3
theme_type_variation = "ChallengeButton"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 158.0
margin_bottom = 174.0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 131.0
margin_bottom = 12.0
size_flags_horizontal = 3
placeholder_text = "match format name"

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 132.0
margin_right = 158.0
margin_bottom = 12.0
text = "save"

[connection signal="value_changed" from="VBoxContainer/ScrollContainer/GameSettingsContainer/DamageModifierContainer/DamageModifier" to="." method="_on_DamageModifier_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/GameSettingsContainer/HitstunModifierContainer/HitstunModifier" to="." method="_on_HitstunModifier_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/GameSettingsContainer/HitstopModifierContainer/HitstopModifier" to="." method="_on_HitstopModifier_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/GameSettingsContainer/GravityModifierContainer/GravityModifier" to="." method="_on_GravityModifier_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/GameSettingsContainer/StartingMeterContainer/StartingMeter" to="." method="_on_StartingMeter_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/GameSettingsContainer/MinDIScalingContainer/MinDIScalingMeter" to="." method="_on_MinDIScalingMeter_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/GameSettingsContainer/MaxDIScalingContainer/MaxDIScalingMeter" to="." method="_on_MaxDIScalingMeter_value_changed"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
